syntax = "proto3";
package Cratis.Chronicle.Contracts.EventSequences;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message AppendManyRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   .bcl.Guid CorrelationId = 4; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated EventToAppend Events = 5;
   repeated Causation Causation = 6;
   Identity CausedBy = 7;
   map<string,ConcurrencyScope> ConcurrencyScopes = 8;
}
message AppendManyResponse {
   .bcl.Guid CorrelationId = 1;
   repeated uint64 SequenceNumbers = 2 [packed = false];
   repeated ConstraintViolation ConstraintViolations = 3;
   repeated string Errors = 4;
   repeated ConcurrencyViolation ConcurrencyViolations = 5;
}
message AppendRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   .bcl.Guid CorrelationId = 4; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   string EventSourceType = 5;
   string EventSourceId = 6;
   string EventStreamType = 7;
   string EventStreamId = 8;
   EventType EventType = 9;
   string Content = 10;
   repeated Causation Causation = 11;
   Identity CausedBy = 12;
   ConcurrencyScope ConcurrencyScope = 13;
   repeated string Tags = 14;
}
message AppendResponse {
   .bcl.Guid CorrelationId = 1;
   uint64 SequenceNumber = 2;
   repeated ConstraintViolation ConstraintViolations = 3;
   repeated string Errors = 4;
   ConcurrencyViolation ConcurrencyViolation = 5;
}
message AppendedEvent {
   EventContext Context = 1;
   string Content = 2;
}
message Causation {
   SerializableDateTimeOffset Occurred = 1;
   string Type = 2;
   map<string,string> Properties = 3;
}
message ConcurrencyScope {
   uint64 SequenceNumber = 1;
   bool EventSourceId = 2;
   string EventStreamType = 3;
   string EventStreamId = 4;
   string EventSourceType = 5;
   repeated EventType EventTypes = 6;
}
message ConcurrencyViolation {
   string EventSourceId = 1;
   uint64 ExpectedSequenceNumber = 2;
   uint64 ActualSequenceNumber = 3;
}
enum ConstraintType {
   Unknown = 0;
   Unique = 1;
   UniqueEventType = 2;
}
message ConstraintViolation {
   string EventTypeId = 1;
   uint64 SequenceNumber = 2;
   ConstraintType ConstraintType = 3;
   string ConstraintName = 4;
   string Message = 5;
   map<string,string> Details = 6;
}
message EventContext {
   EventType EventType = 1;
   string EventSourceType = 2;
   string EventSourceId = 3;
   uint64 SequenceNumber = 4;
   string EventStreamType = 5;
   string EventStreamId = 6;
   SerializableDateTimeOffset Occurred = 7;
   string EventStore = 8;
   string Namespace = 9;
   .bcl.Guid CorrelationId = 10; // default value could not be applied: 00000000-0000-0000-0000-000000000000
   repeated Causation Causation = 11;
   Identity CausedBy = 12;
   EventObservationState ObservationState = 13;
   repeated string Tags = 14;
   string Hash = 15;
}
enum EventObservationState {
   // this is a composite/flags enumeration
   None = 0;
   Initial = 1;
   HeadOfReplay = 2;
   Replay = 4;
   TailOfReplay = 8;
}
message EventToAppend {
   string EventSourceType = 1;
   string EventSourceId = 2;
   string EventStreamType = 3;
   string EventStreamId = 4;
   EventType EventType = 5;
   string Content = 6;
   repeated string Tags = 7;
}
message EventType {
   string Id = 1;
   uint32 Generation = 2;
   bool Tombstone = 3;
}
message GetForEventSourceIdAndEventTypesRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   string EventSourceType = 4;
   string EventSourceId = 5;
   string EventStreamType = 6;
   string EventStreamId = 7;
   repeated EventType EventTypes = 8;
}
message GetForEventSourceIdAndEventTypesResponse {
   repeated AppendedEvent Events = 1;
}
message GetFromEventSequenceNumberRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   uint64 FromEventSequenceNumber = 4;
   uint64 ToEventSequenceNumber = 5;
   string EventSourceId = 6;
   repeated EventType EventTypes = 7;
}
message GetFromEventSequenceNumberResponse {
   repeated AppendedEvent Events = 1;
}
message GetTailSequenceNumberRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   repeated EventType EventTypes = 4;
   string EventSourceId = 5;
   string EventSourceType = 6;
   string EventStreamId = 7;
   string EventStreamType = 8;
}
message GetTailSequenceNumberResponse {
   uint64 SequenceNumber = 1;
}
message HasEventsForEventSourceIdRequest {
   string EventStore = 1;
   string Namespace = 2;
   string EventSequenceId = 3;
   string EventSourceId = 4;
}
message HasEventsForEventSourceIdResponse {
   bool HasEvents = 1;
}
message Identity {
   string Subject = 1;
   string Name = 2;
   string UserName = 3;
   Identity OnBehalfOf = 4;
}
message SerializableDateTimeOffset {
   int64 Ticks = 1;
   double OffsetMinutes = 2;
}
service EventSequences {
   rpc Append (AppendRequest) returns (AppendResponse);
   rpc AppendMany (AppendManyRequest) returns (AppendManyResponse);
   rpc GetEventsFromEventSequenceNumber (GetFromEventSequenceNumberRequest) returns (GetFromEventSequenceNumberResponse);
   rpc GetForEventSourceIdAndEventTypes (GetForEventSourceIdAndEventTypesRequest) returns (GetForEventSourceIdAndEventTypesResponse);
   rpc GetTailSequenceNumber (GetTailSequenceNumberRequest) returns (GetTailSequenceNumberResponse);
   rpc HasEventsForEventSourceId (HasEventsForEventSourceIdRequest) returns (HasEventsForEventSourceIdResponse);
}
